--- a/bezowka_website/main.html
+++ b/bezowka_website/main.html
@@ -11,29 +11,52 @@
 	   <div id="wrapper">
 	   	<nav>
 			<ul id="nav-items">
-				<li><a href="main.html"><img src="img/logo.jpg" id="nav-logo"></a></li>
+				<li><a href="main.html"><img alt="logo" src="img/logo.png" id="nav-logo"></a></li>
 				<li><a href="main.html">Strona Główna</a></li>
 				<li><a href="about_us.html">O nas</a></li>
-				<li> <a href="offer.html">Oferta</a></li>
+				<li><a href="offer.html">Oferta</a></li>
 				<li><a href="contact.html">Kontakt</a></li>
-				<li> <a href="blog.html">Blog</a></li>
+				<li><a href="blog.html">Blog</a></li>
 			</ul>
 	   	</nav>
 	   	<div id="content">
 			<section id="banner-1">
 
 			</section>
-			<section>
-				
+			<section id="about-us">
+				<div class="container">
+					<h2>About Us</h2>
+					<p>Welcome to our website! We are a passionate team dedicated to providing top-notch products/services to our customers.</p>
+					<p>Our mission is to make a positive impact and exceed expectations through innovation and exceptional customer service.</p>
+				</div>
 			</section>
-
-
-
-
+<!--			<section id="gallery">-->
+<!--				<div class="container">-->
+<!--					<h2>Gallery</h2>-->
+<!--					<div class="gallery-items">-->
+<!--						<a href="path/to/image1.jpg" data-lightbox="gallery"><img src="path/to/image1-thumb.jpg" alt="Image 1"></a>-->
+<!--						<a href="path/to/image2.jpg" data-lightbox="gallery"><img src="path/to/image2-thumb.jpg" alt="Image 2"></a>-->
+<!--						&lt;!&ndash; Add more images as needed &ndash;&gt;-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</section>-->
+			<section id="general-info1">
+				<div class="container">
+					<h2>General Information 1</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec aliquam nunc. Proin congue tortor vitae felis malesuada, eu tincidunt est aliquam.</p>
+					<p>Nunc scelerisque purus vel nulla dignissim eleifend. Sed dictum, mi ut varius sagittis, risus justo malesuada lorem, vitae pellentesque odio est quis massa.</p>
+				</div>
+			</section>
+			<section id="general-info2">
+				<div class="container">
+					<h2>General Information 2</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec aliquam nunc. Proin congue tortor vitae felis malesuada, eu tincidunt est aliquam.</p>
+					<p>Nunc scelerisque purus vel nulla dignissim eleifend. Sed dictum, mi ut varius sagittis, risus justo malesuada lorem, vitae pellentesque odio est quis massa.</p>
+				</div>
+			</section>
 
 		</div>
 	   </div>
 		<footer> Paweł Bałbatun </footer>
-
 	</body>
 </html>
