--- a/bezowka_website/main.html
+++ b/bezowka_website/main.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pl-PL">
+<html lang="pl-PL" xmlns="http://www.w3.org/1999/html">
 	<head>
 		<meta charset="UTF-8">
       <title>Bezówka</title>
@@ -21,42 +21,55 @@
 	   	</nav>
 	   	<div id="content">
 			<section id="banner-1">
+				<h1>Bezówka</h1>
+				<h2>Cukiernia Artystyczna</h2>
+			</section>
+			<section class="banner" id="about-us">
+        <div class="banner-content">
+            <h1>About Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec elit lacinia.</p>
+        </div>
+    </section>
 
-			</section>
-			<section id="about-us">
-				<div class="container">
-					<h2>About Us</h2>
-					<p>Welcome to our website! We are a passionate team dedicated to providing top-notch products/services to our customers.</p>
-					<p>Our mission is to make a positive impact and exceed expectations through innovation and exceptional customer service.</p>
-				</div>
-			</section>
-<!--			<section id="gallery">-->
-<!--				<div class="container">-->
-<!--					<h2>Gallery</h2>-->
-<!--					<div class="gallery-items">-->
-<!--						<a href="path/to/image1.jpg" data-lightbox="gallery"><img src="path/to/image1-thumb.jpg" alt="Image 1"></a>-->
-<!--						<a href="path/to/image2.jpg" data-lightbox="gallery"><img src="path/to/image2-thumb.jpg" alt="Image 2"></a>-->
-<!--						&lt;!&ndash; Add more images as needed &ndash;&gt;-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</section>-->
-			<section id="general-info1">
-				<div class="container">
-					<h2>General Information 1</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec aliquam nunc. Proin congue tortor vitae felis malesuada, eu tincidunt est aliquam.</p>
-					<p>Nunc scelerisque purus vel nulla dignissim eleifend. Sed dictum, mi ut varius sagittis, risus justo malesuada lorem, vitae pellentesque odio est quis massa.</p>
-				</div>
-			</section>
-			<section id="general-info2">
-				<div class="container">
-					<h2>General Information 2</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec aliquam nunc. Proin congue tortor vitae felis malesuada, eu tincidunt est aliquam.</p>
-					<p>Nunc scelerisque purus vel nulla dignissim eleifend. Sed dictum, mi ut varius sagittis, risus justo malesuada lorem, vitae pellentesque odio est quis massa.</p>
-				</div>
-			</section>
+    <section class="banner" id="contact">
+        <div class="banner-content">
+            <h1>Contact</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque fringilla tortor.</p>
+        </div>
+    </section>
 
+    <section class="banner" id="location">
+        <div class="banner-content">
+            <h1>Location</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat tincidunt.</p>
+        </div>
+	</section>
 		</div>
 	   </div>
-		<footer> Paweł Bałbatun </footer>
-	</body>
+
+	   <footer class="footer">
+		   <div class="footer-column">
+			   <h3>General Info</h3>
+			   <p>Address: 123 Street Name</p>
+			   <p>Phone: (123) 456-7890</p>
+			   <p>Email: info@example.com</p>
+		   </div>
+		   <div class="footer-column">
+			   <h3>Follow Us</h3>
+			   <a href="https://www.facebook.com" target="_blank">Facebook</a>
+			   <a href="https://www.twitter.com" target="_blank">Twitter</a>
+			   <a href="https://www.instagram.com" target="_blank">Instagram</a>
+		   </div>
+		   <div class="footer-column">
+			   <h3>Contact Us</h3>
+			   <form action="/submit" method="post">
+				   <input type="text" placeholder="Name" required>
+				   <input type="email" placeholder="Email" required>
+				   <textarea placeholder="Message" required></textarea>
+				   <input type="submit" value="Submit">
+			   </form>
+		   </div>
+	   </footer>
+
+   </body>
 </html>
