Full banner, footer redesign

--- a/about_us.html
+++ b/about_us.html
@@ -20,7 +20,7 @@
 				<li><a href="blog.html" class="navbar_text">Blog</a></li>
 			</ul>
 	   	</nav>
-
+	   <div id="content">
 			<section id="about-us">
         		<div class="banner-full banner-full-paragraph-1">
 					<img src="img/tort3.jpeg" alt="Tort">
@@ -70,7 +70,7 @@
 			</section>
 		
 
-
+		</div>
 		</div>
 	   </div>
 	   <footer class="footer">
